--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     <link rel="stylesheet" href="./css/info.css">
     <link rel="stylesheet" href="./css/hebergement.css">
     <link rel="stylesheet" href="./css/activites.css">
-    <script
-      src="https://kit.fontawesome.com/f74cce6e0a.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/f74cce6e0a.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="flex">
