delete unnecessary comment

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </article>
               </a>
 
-              <a class="cursor" href="#" class="afficher-plus">Afficher plus</a>
+              <a class="cursor afficher-plus" href="#" >Afficher plus</a>
             </div>
           </section>
 
