deletion of card activites space

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <h2 class="section-title">Activités à Marseille</h2>
           <div class="activites-cards flex">
             <a class="cursor" href="#">
-              <article class="card">
+              <article class="card flex">
                 <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port de Marseille">
                 <div class="card-content flex">
                   <h3 class="title-photo flex">Vieux-Port</h3>
@@ -275,7 +275,7 @@
             </a>
 
             <a class="cursor" href="#">
-              <article class="card">
+              <article class="card flex">
                 <img src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
                 <div class="card-content flex">
                   <h3 class="title-photo flex">Fort de Pomègues</h3>
@@ -284,7 +284,7 @@
             </a>
 
             <a class="cursor" href="#">
-              <article class="card">
+              <article class="card flex">
                 <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
                 <div class="card-content flex">
                   <h3 class="title-photo flex">Parc national des Calanques</h3>
@@ -293,7 +293,7 @@
             </a>
 
             <a class="cursor" href="#">
-              <article class="card">
+              <article class="card flex">
                 <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
                 <div class="card-content flex">
                   <h3 class="title-photo flex">Notre-Dame-de-la-Garde</h3>
